# porter-httpbin

./: .dockerignore  .git-blame-ignore-revs  .pre-commit-config.yaml  CHANGES.rst  Dockerfile  Pipfile  manifest.yaml  pyproject.toml  requirements.txt  setup.py  test_httpbin.py
.github/: dependabot.yaml  renovate.json
.github/workflows/: porter_app_httpbin_5070.yml  release.yaml  testrunner.yaml
httpbin/: VERSION  core.py  helpers.py
httpbin/templates/flasgger/: index.html
k8s/base/: deployment.yaml  gateway.yaml  ingress.yaml  kustomization.yaml  service.yaml
k8s/base/registry/: kustomization.yaml
k8s/base/versions/: kustomization.yaml
k8s/production/: kustomization.yaml
k8s/staging/: kustomization.yaml
tests/: test_httpbin.py
